Fix bugs related to odd behavior of scanner in java